add ngrok & fix bug
