# src/user-service/model/req/user_change_password.go
@@ -1,0 +1,6 @@
+package req
+
+type UserChangePasswordReq struct {
+	OldPassword string `json:"old_password" validate:"required"`
+	NewPassword string `json:"new_password" validate:"required"`
+}
